--- a/.gitignore
+++ b/.gitignore
@@ -136,7 +136,6 @@ Desktop.ini
 # Packages
 *.egg
 *.egg-info
-dist
 build
 eggs
 parts
@@ -161,3 +160,6 @@ pip-log.txt
 
 # Mac crap
 .DS_Store
+
+# Custom
+node_modules
